--- a/ARGtester/en.lproj/MainStoryboard.storyboard
+++ b/ARGtester/en.lproj/MainStoryboard.storyboard
@@ -5,13 +5,45 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Uploader View Contoller-->
         <scene sceneID="oZA-DW-9Wv">
             <objects>
-                <viewController id="c4S-wk-dlQ" sceneMemberID="viewController">
+                <viewController id="c4S-wk-dlQ" customClass="UploaderViewContoller" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lfi-ns-O2p">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="2YJ-NL-Pf0">
+                                <rect key="frame" x="65" y="185" width="191" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="上">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onClickUpload:" destination="c4S-wk-dlQ" eventType="touchUpInside" id="rcZ-t0-ECm"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Hl6-bU-aOP">
+                                <rect key="frame" x="65" y="262" width="191" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="終">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onClickCloseBtn:" destination="c4S-wk-dlQ" eventType="touchUpInside" id="h2O-T1-Ghw"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
@@ -137,11 +169,11 @@
                                             <action selector="onClickCloseBtn:" destination="B1A-8f-uPF" eventType="touchUpInside" id="Pj1-pf-ABw"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="aTh-y6-2zb">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="aTh-y6-2zb">
                                         <rect key="frame" x="6" y="5" width="34" height="35"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" size="button"/>
-                                        <state key="normal" title="貼" image="button_chair_unselected.png">
+                                        <state key="normal" title="貼" image="Assets/button_chair_unselected.png">
                                             <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -305,8 +337,56 @@
         </scene>
     </scenes>
     <resources>
-        <image name="button_chair_unselected.png" width="77" height="77"/>
+        <image name="Assets/button_chair_unselected.png" width="16" height="16"/>
     </resources>
+    <classes>
+        <class className="EAGLView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EAGLView.h"/>
+        </class>
+        <class className="MetaioSDKViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MetaioSDKViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="onBtnClosePushed:"/>
+                <relationship kind="outlet" name="closeButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="glView" candidateClass="EAGLView"/>
+            </relationships>
+        </class>
+        <class className="MetaioViewController" superclassName="MetaioSDKViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MetaioViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="onClearScreen:"/>
+                <relationship kind="action" name="onClickCloseBtn:"/>
+                <relationship kind="action" name="onPrinterButtonClick:"/>
+                <relationship kind="action" name="onSaveScreen:"/>
+                <relationship kind="action" name="onTakePicture:"/>
+                <relationship kind="outlet" name="subview" candidateClass="UIView"/>
+            </relationships>
+        </class>
+        <class className="RIViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RIViewController.h"/>
+        </class>
+        <class className="SimpleImageViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SimpleImageViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="onClickCloseBtn:"/>
+                <relationship kind="outlet" name="bgView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="UploaderViewContoller" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UploaderViewContoller.h"/>
+            <relationships>
+                <relationship kind="action" name="onClickCloseBtn:"/>
+                <relationship kind="action" name="onClickUpload:"/>
+            </relationships>
+        </class>
+        <class className="WebViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WebViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="onClickCloseBtn:"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
